2008-10-19  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/index.xml, doc/ns-Gendarme.Rules.Interoperability.xml,
	doc/Gendarme.Rules.Interoperability: With the new code in the Makefiles
	we don't need to keep the documentation files in the repository.

2008-10-17  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Make Branch
	implement IEquatable<T> (self-test).
	* UseManagedAlternativesToPInvokeRule.cs: Make PInvokeCall implement
	IEquatable<T> (self-test).

2008-10-15  Néstor Salceda  <nestor.salceda@gmail.com>

	* doc/: Initial import documentation for the rules which belongs to this
	category.

2008-09-14  Sebastien Pouliot  <sebastien@ximian.com> 

	* DoNotCastIntPtrToInt32Rule.cs: Add XML documentation, 
	the [FxCopCompatibility] attribute and use the OpCodeEngine.
	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Add XML 
	documentation, [FxCopCompatibility] attribute and use the 
	OpCodeEngine.
	* MarshalStringsInPInvokeDeclarationsRule.cs: Add XML documentation 
	and [FxCopCompatibility] attribute.
	* PInvokeShouldNotBeVisibleRule.cs: Add XML documentation 
	and [FxCopCompatibility] attribute.
	* UseManagedAlternativesToPInvokeRule.cs: Add XML documentation 
	and [FxCopCompatibility] attribute.

2008-08-10  Sebastien Pouliot  <sebastien@ximian.com> 

	* PInvokeShouldNotBeVisibleRule.cs: Add check for non-static
	p/invokes.
	* Makefile.am: Include all unit tests (typo)

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Remove 
	unused field (self-test)

2008-07-10  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Start using ../common.make

2008-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* GetLastErrorMustBeCalledRightAfterPInvokeRule.cs: Simplify 
	logic a bit. Handle the case where Resolve returns null (cannot 
	find the required assemblies)
	* Makefile.am: Rebuild if the framework has changed.
